# MCP-Loci

./: .gitignore  404.html  DOCS_QUICKSTART.txt  DOCS_SETUP.md  LICENSE  PHASE_4_SUMMARY.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: ci.yml
api/confidence/: index.html
api/db/: index.html
api/embeddings/: index.html
api/tools/: index.html
docs/: index.md  roadmap.md  spec.md
docs/api/: confidence.md  db.md  embeddings.md  tools.md
mcp_loci/: __init__.py  confidence.py  db.py  embedder.py  server.py  similarity.py
roadmap/: index.html
search/: search_index.json
spec/: index.html
tests/: test_embeddings.py  test_forget.py  test_integration.py  test_recall.py  test_remember.py  test_synthesize.py
