[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mcp-loci"
version = "0.2.0"
description = "Persistent, searchable memory for Claude — powered by SQLite, FTS5, and local semantic embeddings"
requires-python = ">=3.11"
dependencies = [
    "fastmcp>=0.9",
    "numpy>=1.24",
    "sentence-transformers>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-anyio",
]

[project.scripts]
mcp-loci = "mcp_loci.server:main"
